plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'bluen.homein.gayo_security'
    compileSdk 34


    defaultConfig {
        applicationId "bluen.homein.gayo_security"
        minSdk 26
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    buildFeatures {
        viewBinding true
    }
    
    tasks.withType(JavaCompile).configureEach{options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']}

}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.constraintlayout
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    // MultiDex
    implementation 'androidx.multidex:multidex:2.0.1'

    // Gson
    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'

    // Mapping
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'

    // Butter Knife
    implementation libs.butterknife
    annotationProcessor libs.butterknife.compiler
    implementation libs.android.slidr

}